{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 113,
  "lineage": "adb47166-4c7a-00e7-a14e-4cac69260cb2",
  "resources": [
    {
      "module": "module.dr_ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:180294215772:loadbalancer/app/itf-masters-tour-dr-alb/606ec0c50f178080",
            "arn_suffix": "app/itf-masters-tour-dr-alb/606ec0c50f178080",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "itf-masters-tour-dr-alb-680531059.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:180294215772:loadbalancer/app/itf-masters-tour-dr-alb/606ec0c50f178080",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "itf-masters-tour-dr-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0fd4d6e46b9d424ef"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05d278257342daea8"
              },
              {
                "subnet_id": "subnet-0fe31616c065738b7"
              }
            ],
            "subnets": [
              "subnet-05d278257342daea8",
              "subnet-0fe31616c065738b7"
            ],
            "tags": {
              "Name": "itf-masters-tour-dr-alb"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-alb",
              "Project": "itf-masters-tour"
            },
            "vpc_id": "vpc-0837d6cfecd0eac4f",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_security_group.alb",
            "module.dr_vpc.aws_subnet.public_1",
            "module.dr_vpc.aws_subnet.public_2",
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.dr_ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:180294215772:listener/app/itf-masters-tour-dr-alb/606ec0c50f178080/87eba77d101c4b5e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:180294215772:listener/app/itf-masters-tour-dr-alb/606ec0c50f178080/87eba77d101c4b5e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:180294215772:loadbalancer/app/itf-masters-tour-dr-alb/606ec0c50f178080",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Project": "itf-masters-tour"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_ecs.aws_lb.this",
            "module.dr_vpc.aws_security_group.alb",
            "module.dr_vpc.aws_subnet.public_1",
            "module.dr_vpc.aws_subnet.public_2",
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.dr_ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:180294215772:listener/app/itf-masters-tour-dr-alb/606ec0c50f178080/b444562ddb4b0158",
            "certificate_arn": "arn:aws:acm:us-west-2:180294215772:certificate/f27df32d-5b08-4fbe-a9e2-3f859e66905a",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:180294215772:targetgroup/itf-masters-tour-dr-tg/f880b335a256a2c0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:180294215772:listener/app/itf-masters-tour-dr-alb/606ec0c50f178080/b444562ddb4b0158",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:180294215772:loadbalancer/app/itf-masters-tour-dr-alb/606ec0c50f178080",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Project": "itf-masters-tour"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_ecs.aws_acm_certificate.this",
            "module.dr_ecs.aws_acm_certificate_validation.this",
            "module.dr_ecs.aws_lb.this",
            "module.dr_ecs.aws_lb_target_group.this",
            "module.dr_ecs.aws_route53_record.cert_validation",
            "module.dr_vpc.aws_security_group.alb",
            "module.dr_vpc.aws_subnet.public_1",
            "module.dr_vpc.aws_subnet.public_2",
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.dr_ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:180294215772:targetgroup/itf-masters-tour-dr-tg/f880b335a256a2c0",
            "arn_suffix": "targetgroup/itf-masters-tour-dr-tg/f880b335a256a2c0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/tournaments",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:180294215772:targetgroup/itf-masters-tour-dr-tg/f880b335a256a2c0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-west-2:180294215772:loadbalancer/app/itf-masters-tour-dr-alb/606ec0c50f178080"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "itf-masters-tour-dr-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "itf-masters-tour-dr-tg"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-tg",
              "Project": "itf-masters-tour"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:internet-gateway/igw-0f6abb5dfc8ec98ba",
            "id": "igw-0f6abb5dfc8ec98ba",
            "owner_id": "180294215772",
            "tags": {
              "Name": "itf-masters-tour-dr-igw"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-igw",
              "Project": "itf-masters-tour"
            },
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0f6abb5dfc8ec98ba",
            "id": "r-rtb-0d51e45dcd0bf6bed1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d51e45dcd0bf6bed",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_internet_gateway.this",
            "module.dr_vpc.aws_route_table.public",
            "module.dr_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:route-table/rtb-0bd383b5b7c5312d5",
            "id": "rtb-0bd383b5b7c5312d5",
            "owner_id": "180294215772",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "itf-masters-tour-dr-private-rt"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-private-rt",
              "Project": "itf-masters-tour"
            },
            "timeouts": null,
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:route-table/rtb-0d51e45dcd0bf6bed",
            "id": "rtb-0d51e45dcd0bf6bed",
            "owner_id": "180294215772",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f6abb5dfc8ec98ba",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "itf-masters-tour-dr-public-rt"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-public-rt",
              "Project": "itf-masters-tour"
            },
            "timeouts": null,
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9bb10df7b1e9cd6",
            "route_table_id": "rtb-0bd383b5b7c5312d5",
            "subnet_id": "subnet-0520e37725ea9c483"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_route_table.private",
            "module.dr_vpc.aws_subnet.private_app_1",
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000d65e9eb4bf0e08",
            "route_table_id": "rtb-0bd383b5b7c5312d5",
            "subnet_id": "subnet-0d29e74e88d59ff73"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_route_table.private",
            "module.dr_vpc.aws_subnet.private_app_2",
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d01a567a821d660",
            "route_table_id": "rtb-0bd383b5b7c5312d5",
            "subnet_id": "subnet-07365e2322620abff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_route_table.private",
            "module.dr_vpc.aws_subnet.private_db_1",
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-042c9fb0d3fdda9ff",
            "route_table_id": "rtb-0bd383b5b7c5312d5",
            "subnet_id": "subnet-0c4e089b4d6d86247"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_route_table.private",
            "module.dr_vpc.aws_subnet.private_db_2",
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d553dfc40ec6be6f",
            "route_table_id": "rtb-0d51e45dcd0bf6bed",
            "subnet_id": "subnet-05d278257342daea8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_route_table.public",
            "module.dr_vpc.aws_subnet.public_1",
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ff1090be2b2458b1",
            "route_table_id": "rtb-0d51e45dcd0bf6bed",
            "subnet_id": "subnet-0fe31616c065738b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_route_table.public",
            "module.dr_vpc.aws_subnet.public_2",
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:security-group/sg-0fd4d6e46b9d424ef",
            "description": "ALB: inbound HTTPS from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd4d6e46b9d424ef",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP (redirect to HTTPS)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "itf-masters-tour-dr-alb-20260217125924501000000005",
            "name_prefix": "itf-masters-tour-dr-alb-",
            "owner_id": "180294215772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itf-masters-tour-dr-alb-sg"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-alb-sg",
              "Project": "itf-masters-tour"
            },
            "timeouts": null,
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fargate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:security-group/sg-089f2d8bb2b0724ec",
            "description": "Fargate: inbound from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089f2d8bb2b0724ec",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Flask from ALB",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fd4d6e46b9d424ef"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "itf-masters-tour-dr-fargate-20260217125931489400000008",
            "name_prefix": "itf-masters-tour-dr-fargate-",
            "owner_id": "180294215772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itf-masters-tour-dr-fargate-sg"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-fargate-sg",
              "Project": "itf-masters-tour"
            },
            "timeouts": null,
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_security_group.alb",
            "module.dr_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:security-group/sg-0c9437174b522be9e",
            "description": "RDS: inbound from Fargate only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9437174b522be9e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from Fargate",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089f2d8bb2b0724ec"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "itf-masters-tour-dr-rds-2026021712593691270000000a",
            "name_prefix": "itf-masters-tour-dr-rds-",
            "owner_id": "180294215772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itf-masters-tour-dr-rds-sg"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-rds-sg",
              "Project": "itf-masters-tour"
            },
            "timeouts": null,
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_security_group.alb",
            "module.dr_vpc.aws_security_group.fargate",
            "module.dr_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:security-group/sg-0fbe1ac118510ff51",
            "description": "VPC Endpoints: HTTPS from Fargate",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fbe1ac118510ff51",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from Fargate",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089f2d8bb2b0724ec"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "itf-masters-tour-dr-vpce-20260217125936758000000009",
            "name_prefix": "itf-masters-tour-dr-vpce-",
            "owner_id": "180294215772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itf-masters-tour-dr-vpce-sg"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-vpce-sg",
              "Project": "itf-masters-tour"
            },
            "timeouts": null,
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_security_group.alb",
            "module.dr_vpc.aws_security_group.fargate",
            "module.dr_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:subnet/subnet-0520e37725ea9c483",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0520e37725ea9c483",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180294215772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itf-masters-tour-dr-private-app-1"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-private-app-1",
              "Project": "itf-masters-tour"
            },
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:subnet/subnet-0d29e74e88d59ff73",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d29e74e88d59ff73",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180294215772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itf-masters-tour-dr-private-app-2"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-private-app-2",
              "Project": "itf-masters-tour"
            },
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:subnet/subnet-07365e2322620abff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07365e2322620abff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180294215772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itf-masters-tour-dr-private-db-1"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-private-db-1",
              "Project": "itf-masters-tour"
            },
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:subnet/subnet-0c4e089b4d6d86247",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4e089b4d6d86247",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180294215772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itf-masters-tour-dr-private-db-2"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-private-db-2",
              "Project": "itf-masters-tour"
            },
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:subnet/subnet-05d278257342daea8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d278257342daea8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180294215772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itf-masters-tour-dr-public-1"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-public-1",
              "Project": "itf-masters-tour"
            },
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:subnet/subnet-0fe31616c065738b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe31616c065738b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180294215772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itf-masters-tour-dr-public-2"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-public-2",
              "Project": "itf-masters-tour"
            },
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:vpc/vpc-0837d6cfecd0eac4f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0eb4219643c397649",
            "default_route_table_id": "rtb-0c5b55b68aa1c1aa5",
            "default_security_group_id": "sg-0a20dc16f0566f569",
            "dhcp_options_id": "dopt-0d01f7b8e36a20cde",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0837d6cfecd0eac4f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c5b55b68aa1c1aa5",
            "owner_id": "180294215772",
            "tags": {
              "Name": "itf-masters-tour-dr"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr",
              "Project": "itf-masters-tour"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:vpc-endpoint/vpce-0116f5d8be37fef98",
            "dns_entry": [
              {
                "dns_name": "vpce-0116f5d8be37fef98-dwyfwcai.api.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0116f5d8be37fef98-dwyfwcai-us-west-2a.api.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0116f5d8be37fef98-dwyfwcai-us-west-2b.api.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "api.ecr.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z07731763QVJP26A8L1XL"
              },
              {
                "dns_name": "ecr.us-west-2.api.aws",
                "hosted_zone_id": "Z01791753RY87NLIQOB1Z"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0116f5d8be37fef98",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03a9c8360e108da2f",
              "eni-0b804990fc78427e1"
            ],
            "owner_id": "180294215772",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0fbe1ac118510ff51"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.api",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.10.124",
                "subnet_id": "subnet-0520e37725ea9c483"
              },
              {
                "ipv4": "10.1.11.226",
                "subnet_id": "subnet-0d29e74e88d59ff73"
              }
            ],
            "subnet_ids": [
              "subnet-0520e37725ea9c483",
              "subnet-0d29e74e88d59ff73"
            ],
            "tags": {
              "Name": "itf-masters-tour-dr-vpce-ecr-api"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-vpce-ecr-api",
              "Project": "itf-masters-tour"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_security_group.alb",
            "module.dr_vpc.aws_security_group.fargate",
            "module.dr_vpc.aws_security_group.vpce",
            "module.dr_vpc.aws_subnet.private_app_1",
            "module.dr_vpc.aws_subnet.private_app_2",
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available",
            "module.dr_vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:vpc-endpoint/vpce-0c6996a76ed6cf73a",
            "dns_entry": [
              {
                "dns_name": "vpce-0c6996a76ed6cf73a-xsy2mmga.dkr.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0c6996a76ed6cf73a-xsy2mmga-us-west-2a.dkr.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0c6996a76ed6cf73a-xsy2mmga-us-west-2b.dkr.ecr.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "dkr.ecr.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z0173037328K8SEIII71S"
              },
              {
                "dns_name": "*.dkr.ecr.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z0173037328K8SEIII71S"
              },
              {
                "dns_name": "dkr-ecr.us-west-2.on.aws",
                "hosted_zone_id": "Z1014989JV7C5MDROE9L"
              },
              {
                "dns_name": "*.dkr-ecr.us-west-2.on.aws",
                "hosted_zone_id": "Z1014989JV7C5MDROE9L"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c6996a76ed6cf73a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03a6505bd8ee4f296",
              "eni-0eed6f248225f3a0c"
            ],
            "owner_id": "180294215772",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0fbe1ac118510ff51"
            ],
            "service_name": "com.amazonaws.us-west-2.ecr.dkr",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.10.203",
                "subnet_id": "subnet-0520e37725ea9c483"
              },
              {
                "ipv4": "10.1.11.98",
                "subnet_id": "subnet-0d29e74e88d59ff73"
              }
            ],
            "subnet_ids": [
              "subnet-0520e37725ea9c483",
              "subnet-0d29e74e88d59ff73"
            ],
            "tags": {
              "Name": "itf-masters-tour-dr-vpce-ecr-dkr"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-vpce-ecr-dkr",
              "Project": "itf-masters-tour"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_security_group.alb",
            "module.dr_vpc.aws_security_group.fargate",
            "module.dr_vpc.aws_security_group.vpce",
            "module.dr_vpc.aws_subnet.private_app_1",
            "module.dr_vpc.aws_subnet.private_app_2",
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available",
            "module.dr_vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:vpc-endpoint/vpce-097361ee6649341b0",
            "dns_entry": [
              {
                "dns_name": "vpce-097361ee6649341b0-pzq6rrdw.logs.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-097361ee6649341b0-pzq6rrdw-us-west-2b.logs.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-097361ee6649341b0-pzq6rrdw-us-west-2a.logs.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "logs.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z0756258S1N4DBDSHKJC"
              },
              {
                "dns_name": "streaming-logs.us-west-2.api.aws",
                "hosted_zone_id": "Z07731942WM3QENWW6TNF"
              },
              {
                "dns_name": "logs.us-west-2.api.aws",
                "hosted_zone_id": "Z07562852GBYDNQTYRSR7"
              },
              {
                "dns_name": "streaming-logs.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z01726311X4RMPXFYYI8B"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-097361ee6649341b0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0b15d6e81be015855",
              "eni-0e9eace57694bf42b"
            ],
            "owner_id": "180294215772",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0fbe1ac118510ff51"
            ],
            "service_name": "com.amazonaws.us-west-2.logs",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.10.22",
                "subnet_id": "subnet-0520e37725ea9c483"
              },
              {
                "ipv4": "10.1.11.214",
                "subnet_id": "subnet-0d29e74e88d59ff73"
              }
            ],
            "subnet_ids": [
              "subnet-0520e37725ea9c483",
              "subnet-0d29e74e88d59ff73"
            ],
            "tags": {
              "Name": "itf-masters-tour-dr-vpce-logs"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-vpce-logs",
              "Project": "itf-masters-tour"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_security_group.alb",
            "module.dr_vpc.aws_security_group.fargate",
            "module.dr_vpc.aws_security_group.vpce",
            "module.dr_vpc.aws_subnet.private_app_1",
            "module.dr_vpc.aws_subnet.private_app_2",
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available",
            "module.dr_vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:vpc-endpoint/vpce-05705cde2e6ed4787",
            "cidr_blocks": [
              "3.5.76.0/22",
              "16.12.96.0/20",
              "16.12.112.0/21",
              "3.5.80.0/21",
              "16.15.32.0/20",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "16.12.88.0/21",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05705cde2e6ed4787",
            "ip_address_type": "ipv4",
            "owner_id": "180294215772",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0bd383b5b7c5312d5"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "service_region": "us-west-2",
            "state": "available",
            "tags": {
              "Name": "itf-masters-tour-dr-vpce-s3"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-vpce-s3",
              "Project": "itf-masters-tour"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_route_table.private",
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:vpc-endpoint/vpce-0ae478cbd9ad3e7fc",
            "dns_entry": [
              {
                "dns_name": "vpce-0ae478cbd9ad3e7fc-bbj6ia4i.secretsmanager.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0ae478cbd9ad3e7fc-bbj6ia4i-us-west-2b.secretsmanager.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0ae478cbd9ad3e7fc-bbj6ia4i-us-west-2a.secretsmanager.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "secretsmanager.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z101304331ONHVQRGMU5J"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ae478cbd9ad3e7fc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00fa9f7913f93f4a7",
              "eni-0f307776a92c3a252"
            ],
            "owner_id": "180294215772",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0fbe1ac118510ff51"
            ],
            "service_name": "com.amazonaws.us-west-2.secretsmanager",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.10.27",
                "subnet_id": "subnet-0520e37725ea9c483"
              },
              {
                "ipv4": "10.1.11.78",
                "subnet_id": "subnet-0d29e74e88d59ff73"
              }
            ],
            "subnet_ids": [
              "subnet-0520e37725ea9c483",
              "subnet-0d29e74e88d59ff73"
            ],
            "tags": {
              "Name": "itf-masters-tour-dr-vpce-secrets"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-vpce-secrets",
              "Project": "itf-masters-tour"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_security_group.alb",
            "module.dr_vpc.aws_security_group.fargate",
            "module.dr_vpc.aws_security_group.vpce",
            "module.dr_vpc.aws_subnet.private_app_1",
            "module.dr_vpc.aws_subnet.private_app_2",
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available",
            "module.dr_vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.dr_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].dr",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:180294215772:vpc-endpoint/vpce-0724a6229110bd97b",
            "dns_entry": [
              {
                "dns_name": "vpce-0724a6229110bd97b-2ijxqxs0.ssmmessages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0724a6229110bd97b-2ijxqxs0-us-west-2a.ssmmessages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-0724a6229110bd97b-2ijxqxs0-us-west-2b.ssmmessages.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "ssmmessages.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z06294476P14RX5MPKHX"
              },
              {
                "dns_name": "ssmmessages.us-west-2.api.aws",
                "hosted_zone_id": "Z040960820WJVDG03VW79"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0724a6229110bd97b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0172980942d43dea5",
              "eni-04014fcbc836841c5"
            ],
            "owner_id": "180294215772",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0fbe1ac118510ff51"
            ],
            "service_name": "com.amazonaws.us-west-2.ssmmessages",
            "service_region": "us-west-2",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.10.83",
                "subnet_id": "subnet-0520e37725ea9c483"
              },
              {
                "ipv4": "10.1.11.209",
                "subnet_id": "subnet-0d29e74e88d59ff73"
              }
            ],
            "subnet_ids": [
              "subnet-0520e37725ea9c483",
              "subnet-0d29e74e88d59ff73"
            ],
            "tags": {
              "Name": "itf-masters-tour-dr-vpce-ssmmessages"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-dr-vpce-ssmmessages",
              "Project": "itf-masters-tour"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0837d6cfecd0eac4f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.dr_vpc.aws_security_group.alb",
            "module.dr_vpc.aws_security_group.fargate",
            "module.dr_vpc.aws_security_group.vpce",
            "module.dr_vpc.aws_subnet.private_app_1",
            "module.dr_vpc.aws_subnet.private_app_2",
            "module.dr_vpc.aws_vpc.this",
            "module.dr_vpc.data.aws_availability_zones.available",
            "module.dr_vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.primary_ecs",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180294215772:loadbalancer/app/itf-masters-tour-primary-alb/8ce93416adb435e8",
            "arn_suffix": "app/itf-masters-tour-primary-alb/8ce93416adb435e8",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "itf-masters-tour-primary-alb-1601080841.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:180294215772:loadbalancer/app/itf-masters-tour-primary-alb/8ce93416adb435e8",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "itf-masters-tour-primary-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08e40080eea869d55"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04ef416cd86be1e92"
              },
              {
                "subnet_id": "subnet-0ba3dcf27eac30179"
              }
            ],
            "subnets": [
              "subnet-04ef416cd86be1e92",
              "subnet-0ba3dcf27eac30179"
            ],
            "tags": {
              "Name": "itf-masters-tour-primary-alb"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-alb",
              "Project": "itf-masters-tour"
            },
            "vpc_id": "vpc-0f5a718e356e080b1",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_security_group.alb",
            "module.primary_vpc.aws_subnet.public_1",
            "module.primary_vpc.aws_subnet.public_2",
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary_ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180294215772:listener/app/itf-masters-tour-primary-alb/8ce93416adb435e8/c425a681a95670bf",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:180294215772:listener/app/itf-masters-tour-primary-alb/8ce93416adb435e8/c425a681a95670bf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:180294215772:loadbalancer/app/itf-masters-tour-primary-alb/8ce93416adb435e8",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Project": "itf-masters-tour"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_ecs.aws_lb.this",
            "module.primary_vpc.aws_security_group.alb",
            "module.primary_vpc.aws_subnet.public_1",
            "module.primary_vpc.aws_subnet.public_2",
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary_ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180294215772:listener/app/itf-masters-tour-primary-alb/8ce93416adb435e8/4f4d96eee7a2be2f",
            "certificate_arn": "arn:aws:acm:us-east-1:180294215772:certificate/3922fa3c-f829-4b04-8e07-d1c77b334780",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:180294215772:targetgroup/itf-masters-tour-primary-tg/2c72a03000b5f17f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:180294215772:listener/app/itf-masters-tour-primary-alb/8ce93416adb435e8/4f4d96eee7a2be2f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:180294215772:loadbalancer/app/itf-masters-tour-primary-alb/8ce93416adb435e8",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Project": "itf-masters-tour"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_ecs.aws_acm_certificate.this",
            "module.primary_ecs.aws_acm_certificate_validation.this",
            "module.primary_ecs.aws_lb.this",
            "module.primary_ecs.aws_lb_target_group.this",
            "module.primary_ecs.aws_route53_record.cert_validation",
            "module.primary_vpc.aws_security_group.alb",
            "module.primary_vpc.aws_subnet.public_1",
            "module.primary_vpc.aws_subnet.public_2",
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary_ecs",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:180294215772:targetgroup/itf-masters-tour-primary-tg/2c72a03000b5f17f",
            "arn_suffix": "targetgroup/itf-masters-tour-primary-tg/2c72a03000b5f17f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/tournaments",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:180294215772:targetgroup/itf-masters-tour-primary-tg/2c72a03000b5f17f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:180294215772:loadbalancer/app/itf-masters-tour-primary-alb/8ce93416adb435e8"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "itf-masters-tour-primary-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "itf-masters-tour-primary-tg"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-tg",
              "Project": "itf-masters-tour"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:internet-gateway/igw-0ac5f04c977f2f9ba",
            "id": "igw-0ac5f04c977f2f9ba",
            "owner_id": "180294215772",
            "tags": {
              "Name": "itf-masters-tour-primary-igw"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-igw",
              "Project": "itf-masters-tour"
            },
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ac5f04c977f2f9ba",
            "id": "r-rtb-08f27b2ac284580e51080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08f27b2ac284580e5",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_internet_gateway.this",
            "module.primary_vpc.aws_route_table.public",
            "module.primary_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:route-table/rtb-0966f767f1127ff6d",
            "id": "rtb-0966f767f1127ff6d",
            "owner_id": "180294215772",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "itf-masters-tour-primary-private-rt"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-private-rt",
              "Project": "itf-masters-tour"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:route-table/rtb-08f27b2ac284580e5",
            "id": "rtb-08f27b2ac284580e5",
            "owner_id": "180294215772",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ac5f04c977f2f9ba",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "itf-masters-tour-primary-public-rt"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-public-rt",
              "Project": "itf-masters-tour"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070248ce5ec47901d",
            "route_table_id": "rtb-0966f767f1127ff6d",
            "subnet_id": "subnet-04e97626116f25b43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_route_table.private",
            "module.primary_vpc.aws_subnet.private_app_1",
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02346f10c5bac2033",
            "route_table_id": "rtb-0966f767f1127ff6d",
            "subnet_id": "subnet-05378bedb76f11ced"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_route_table.private",
            "module.primary_vpc.aws_subnet.private_app_2",
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05c0f2cc83f46cf63",
            "route_table_id": "rtb-0966f767f1127ff6d",
            "subnet_id": "subnet-09323e4699e6d02b8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_route_table.private",
            "module.primary_vpc.aws_subnet.private_db_1",
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cb1950b5597fcb6",
            "route_table_id": "rtb-0966f767f1127ff6d",
            "subnet_id": "subnet-02ac32868397d76a1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_route_table.private",
            "module.primary_vpc.aws_subnet.private_db_2",
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07c247f34bf838ef2",
            "route_table_id": "rtb-08f27b2ac284580e5",
            "subnet_id": "subnet-0ba3dcf27eac30179"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_route_table.public",
            "module.primary_vpc.aws_subnet.public_1",
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05acd6c97ec3a1bd5",
            "route_table_id": "rtb-08f27b2ac284580e5",
            "subnet_id": "subnet-04ef416cd86be1e92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_route_table.public",
            "module.primary_vpc.aws_subnet.public_2",
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:security-group/sg-08e40080eea869d55",
            "description": "ALB: inbound HTTPS from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e40080eea869d55",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP (redirect to HTTPS)",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "itf-masters-tour-primary-alb-20260217125921520100000006",
            "name_prefix": "itf-masters-tour-primary-alb-",
            "owner_id": "180294215772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itf-masters-tour-primary-alb-sg"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-alb-sg",
              "Project": "itf-masters-tour"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fargate",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:security-group/sg-0752dfad812121c2d",
            "description": "Fargate: inbound from ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0752dfad812121c2d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Flask from ALB",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08e40080eea869d55"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "itf-masters-tour-primary-fargate-20260217125928699300000008",
            "name_prefix": "itf-masters-tour-primary-fargate-",
            "owner_id": "180294215772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itf-masters-tour-primary-fargate-sg"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-fargate-sg",
              "Project": "itf-masters-tour"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_security_group.alb",
            "module.primary_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:security-group/sg-013d24597f944dc7e",
            "description": "RDS: inbound from Fargate only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013d24597f944dc7e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL from Fargate",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0752dfad812121c2d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "itf-masters-tour-primary-rds-20260217125931959700000009",
            "name_prefix": "itf-masters-tour-primary-rds-",
            "owner_id": "180294215772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itf-masters-tour-primary-rds-sg"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-rds-sg",
              "Project": "itf-masters-tour"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_security_group.alb",
            "module.primary_vpc.aws_security_group.fargate",
            "module.primary_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpce",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:security-group/sg-0d7408579f3dd93b6",
            "description": "VPC Endpoints: HTTPS from Fargate",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d7408579f3dd93b6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from Fargate",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0752dfad812121c2d"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "itf-masters-tour-primary-vpce-2026021712593196830000000a",
            "name_prefix": "itf-masters-tour-primary-vpce-",
            "owner_id": "180294215772",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "itf-masters-tour-primary-vpce-sg"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-vpce-sg",
              "Project": "itf-masters-tour"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_security_group.alb",
            "module.primary_vpc.aws_security_group.fargate",
            "module.primary_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:subnet/subnet-04e97626116f25b43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e97626116f25b43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180294215772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itf-masters-tour-primary-private-app-1"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-private-app-1",
              "Project": "itf-masters-tour"
            },
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:subnet/subnet-05378bedb76f11ced",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05378bedb76f11ced",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180294215772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itf-masters-tour-primary-private-app-2"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-private-app-2",
              "Project": "itf-masters-tour"
            },
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:subnet/subnet-09323e4699e6d02b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09323e4699e6d02b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180294215772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itf-masters-tour-primary-private-db-1"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-private-db-1",
              "Project": "itf-masters-tour"
            },
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:subnet/subnet-02ac32868397d76a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02ac32868397d76a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180294215772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itf-masters-tour-primary-private-db-2"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-private-db-2",
              "Project": "itf-masters-tour"
            },
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:subnet/subnet-0ba3dcf27eac30179",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ba3dcf27eac30179",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180294215772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itf-masters-tour-primary-public-1"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-public-1",
              "Project": "itf-masters-tour"
            },
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:subnet/subnet-04ef416cd86be1e92",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ef416cd86be1e92",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180294215772",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "itf-masters-tour-primary-public-2"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-public-2",
              "Project": "itf-masters-tour"
            },
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:vpc/vpc-0f5a718e356e080b1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-077a807d1d9eaea81",
            "default_route_table_id": "rtb-00274219b1c9014f4",
            "default_security_group_id": "sg-092a9ba581ff2ea69",
            "dhcp_options_id": "dopt-088ca909502fe7db0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f5a718e356e080b1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00274219b1c9014f4",
            "owner_id": "180294215772",
            "tags": {
              "Name": "itf-masters-tour-primary"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary",
              "Project": "itf-masters-tour"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:vpc-endpoint/vpce-041f698701f3b6934",
            "dns_entry": [
              {
                "dns_name": "vpce-041f698701f3b6934-i30y6m1c.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-041f698701f3b6934-i30y6m1c-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-041f698701f3b6934-i30y6m1c-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0772320E3GGUKEXHADL"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z077234732JUGZU9IL59E"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-041f698701f3b6934",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07e836b5c658911b2",
              "eni-0b7bcdf338cb88554"
            ],
            "owner_id": "180294215772",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d7408579f3dd93b6"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.24",
                "subnet_id": "subnet-04e97626116f25b43"
              },
              {
                "ipv4": "10.0.11.103",
                "subnet_id": "subnet-05378bedb76f11ced"
              }
            ],
            "subnet_ids": [
              "subnet-04e97626116f25b43",
              "subnet-05378bedb76f11ced"
            ],
            "tags": {
              "Name": "itf-masters-tour-primary-vpce-ecr-api"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-vpce-ecr-api",
              "Project": "itf-masters-tour"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_security_group.alb",
            "module.primary_vpc.aws_security_group.fargate",
            "module.primary_vpc.aws_security_group.vpce",
            "module.primary_vpc.aws_subnet.private_app_1",
            "module.primary_vpc.aws_subnet.private_app_2",
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available",
            "module.primary_vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ecr_dkr",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:vpc-endpoint/vpce-0065710f9cc354394",
            "dns_entry": [
              {
                "dns_name": "vpce-0065710f9cc354394-ofg48vfb.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0065710f9cc354394-ofg48vfb-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0065710f9cc354394-ofg48vfb-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0173038BRU14OJVYDSY"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0173038BRU14OJVYDSY"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z01789952A9HUA5Q6ZIRR"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z01789952A9HUA5Q6ZIRR"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0065710f9cc354394",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00d37598548bcb598",
              "eni-01e6a382dde474099"
            ],
            "owner_id": "180294215772",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d7408579f3dd93b6"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.120",
                "subnet_id": "subnet-04e97626116f25b43"
              },
              {
                "ipv4": "10.0.11.95",
                "subnet_id": "subnet-05378bedb76f11ced"
              }
            ],
            "subnet_ids": [
              "subnet-04e97626116f25b43",
              "subnet-05378bedb76f11ced"
            ],
            "tags": {
              "Name": "itf-masters-tour-primary-vpce-ecr-dkr"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-vpce-ecr-dkr",
              "Project": "itf-masters-tour"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_security_group.alb",
            "module.primary_vpc.aws_security_group.fargate",
            "module.primary_vpc.aws_security_group.vpce",
            "module.primary_vpc.aws_subnet.private_app_1",
            "module.primary_vpc.aws_subnet.private_app_2",
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available",
            "module.primary_vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:vpc-endpoint/vpce-0558113aa0db76edb",
            "dns_entry": [
              {
                "dns_name": "vpce-0558113aa0db76edb-s4tx5g95.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0558113aa0db76edb-s4tx5g95-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0558113aa0db76edb-s4tx5g95-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07723263LZDADVXMVCXQ"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z07562613E9I4EDQEZUSB"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z07562603N4RIZBQ7865X"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0755525HK4NZLM1XVZ9"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0558113aa0db76edb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04a7ee9445ba26c9b",
              "eni-0e667fe8e109ae52e"
            ],
            "owner_id": "180294215772",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d7408579f3dd93b6"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.202",
                "subnet_id": "subnet-04e97626116f25b43"
              },
              {
                "ipv4": "10.0.11.232",
                "subnet_id": "subnet-05378bedb76f11ced"
              }
            ],
            "subnet_ids": [
              "subnet-04e97626116f25b43",
              "subnet-05378bedb76f11ced"
            ],
            "tags": {
              "Name": "itf-masters-tour-primary-vpce-logs"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-vpce-logs",
              "Project": "itf-masters-tour"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_security_group.alb",
            "module.primary_vpc.aws_security_group.fargate",
            "module.primary_vpc.aws_security_group.vpce",
            "module.primary_vpc.aws_subnet.private_app_1",
            "module.primary_vpc.aws_subnet.private_app_2",
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available",
            "module.primary_vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:vpc-endpoint/vpce-044b7d630d784e357",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-044b7d630d784e357",
            "ip_address_type": "ipv4",
            "owner_id": "180294215772",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0966f767f1127ff6d"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "itf-masters-tour-primary-vpce-s3"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-vpce-s3",
              "Project": "itf-masters-tour"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_route_table.private",
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:vpc-endpoint/vpce-01c5b309a29766e29",
            "dns_entry": [
              {
                "dns_name": "vpce-01c5b309a29766e29-rkg2322x.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01c5b309a29766e29-rkg2322x-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01c5b309a29766e29-rkg2322x-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z10078912UB8KBJYEMD1F"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01c5b309a29766e29",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-07a122a1fd5418c42",
              "eni-0da47f3c003ba9f38"
            ],
            "owner_id": "180294215772",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d7408579f3dd93b6"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.209",
                "subnet_id": "subnet-04e97626116f25b43"
              },
              {
                "ipv4": "10.0.11.165",
                "subnet_id": "subnet-05378bedb76f11ced"
              }
            ],
            "subnet_ids": [
              "subnet-04e97626116f25b43",
              "subnet-05378bedb76f11ced"
            ],
            "tags": {
              "Name": "itf-masters-tour-primary-vpce-secrets"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-vpce-secrets",
              "Project": "itf-masters-tour"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_security_group.alb",
            "module.primary_vpc.aws_security_group.fargate",
            "module.primary_vpc.aws_security_group.vpce",
            "module.primary_vpc.aws_subnet.private_app_1",
            "module.primary_vpc.aws_subnet.private_app_2",
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available",
            "module.primary_vpc.data.aws_region.current"
          ]
        }
      ]
    },
    {
      "module": "module.primary_vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssmmessages",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180294215772:vpc-endpoint/vpce-0a59da1d368802205",
            "dns_entry": [
              {
                "dns_name": "vpce-0a59da1d368802205-trk7hqds.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a59da1d368802205-trk7hqds-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a59da1d368802205-trk7hqds-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04120943FMNDEHC4XRHJ"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z08674302Z5KZDH66NWH8"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a59da1d368802205",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06ffa4f8b74328d31",
              "eni-0985d88c4f38edeaa"
            ],
            "owner_id": "180294215772",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0d7408579f3dd93b6"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.10.154",
                "subnet_id": "subnet-04e97626116f25b43"
              },
              {
                "ipv4": "10.0.11.161",
                "subnet_id": "subnet-05378bedb76f11ced"
              }
            ],
            "subnet_ids": [
              "subnet-04e97626116f25b43",
              "subnet-05378bedb76f11ced"
            ],
            "tags": {
              "Name": "itf-masters-tour-primary-vpce-ssmmessages"
            },
            "tags_all": {
              "Environment": "portfolio",
              "ManagedBy": "terraform",
              "Name": "itf-masters-tour-primary-vpce-ssmmessages",
              "Project": "itf-masters-tour"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0f5a718e356e080b1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.primary_vpc.aws_security_group.alb",
            "module.primary_vpc.aws_security_group.fargate",
            "module.primary_vpc.aws_security_group.vpce",
            "module.primary_vpc.aws_subnet.private_app_1",
            "module.primary_vpc.aws_subnet.private_app_2",
            "module.primary_vpc.aws_vpc.this",
            "module.primary_vpc.data.aws_availability_zones.available",
            "module.primary_vpc.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}